tests/demo/demo.exp
Error ------------------------------------------------------------------------------------------------------ 1/f.js:3:30

Cannot use operator `/` with operands number [1] and null [2] [unsafe-arithmetic]

   1/f.js:3:30
   3| function f(x: null) { return 42/x; }
                                   ^^^^

References:
   1/f.js:3:30
   3| function f(x: null) { return 42/x; }
                                   ^^ [1]
   1/f.js:3:15
   3| function f(x: null) { return 42/x; }
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- 2/A.js:10:21

Cannot call `callback` with `this.getX()` bound to `x` because number [1] is incompatible with string [2].
[incompatible-call]

   2/A.js:10:21
   10|     return callback(this.getX());
                           ^^^^^^^^^^^

References:
   2/A.js:7:11
    7|   getX(): number { return this.x; }
                 ^^^^^^ [1]
   2/A.js:9:24
    9|   onLoad(callback: (x: string) => number): number {
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ 2/B.js:3:13

Cannot use `new` on exports [1]. Only classes can be constructed. [invalid-constructor]

   2/B.js:3:13
   3| var z = new A("42").getX();
                  ^

References:
   2/A.js
   ^^^^^^ [1]



Found 3 errors
